tests/transpiler/x/clj/sum_builtin.error
run error: exit status 1
Syntax error compiling at (/workspace/mochi/tests/transpiler/x/clj/sum_builtin.clj:3:25).
Unable to resolve symbol: sum in this context

Full report at:
/tmp/clojure-4362716150706500104.edn
