tests/transpiler/x/clj/sum_builtin.clj
;; Generated by Mochi transpiler on 2025-07-19T06:44:54Z
(ns main)
(defn -main [] (println (sum [1 2 3])))
(-main)
